# sic

clib/: Makefile.am  autogen.sh  configure.ac  sic.c  sic.h
src/gosic/: gosic.go
src/sample/: main.go
